force-app/main/default/objects/MOCK_Score__c/MOCK_Score__c.object-meta.xml
<CustomObject>
    <label>Score</label>
    <nameField>
        <displayFormat>S-{00000}</displayFormat>
        <label>Score Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>