force-app/main/default/objects/MOCK_Score__c/fields/Harvest_Field__c.field-meta.xml
<CustomField>
    <fullName>Harvest_Field__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Harvest_Field</label>
    <referenceTo>Harvest_Field__c</referenceTo>
    <relationshipLabel>Score</relationshipLabel>
    <relationshipName>Scores</relationshipName>
    <type>Lookup</type>
</CustomField>